avance de login, separacion de front basico

--- a/public/registro/index.html
+++ b/public/registro/index.html
@@ -14,13 +14,13 @@
 
 <body>
 
-    <h1>Acceso Denegado</h1>
+    <h1>Registro</h1>
     <hr>
 
     <h2>Intenta iniciar sesion</h2>
   
   
-    <a href="login">Login</a>
+    <a href="login">Registro/Login</a>
    
 
 
