--- a/public/registro/index.html
+++ b/public/registro/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -14,16 +14,56 @@
 
 <body>
 
-    <h1>Registro</h1>
-    <hr>
-
-    <h2>Intenta iniciar sesion</h2>
-  
-  
-    <a href="login">Registro/Login</a>
+    <h1>Ingreso de usuarios</h1>
+    <hr> <br>
+    Correo: <input type="text"> 
+    Contraseña: <input type="text">
+    <br>
+    <h4>Inicia sesion con google</h4>
+    <div class="g-signin2" data-onsuccess="onSignIn"></div>
    
+    <br><br>
+   <!--  <a href="#" onclick="signOut();">Cerrar sesions</a> -->
+
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+
+    <script>
+
+        var url = (window.location.hostname.includes('localhost'))
+            ? 'http://localhost:3000/api/auth/google'
+            : 'https://helium-restserver.herokuapp.com/api/auth/google';
 
 
+        function onSignIn(googleUser) {
+            var profile = googleUser.getBasicProfile();
+            console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
+            console.log('Name: ' + profile.getName());
+            console.log('Image URL: ' + profile.getImageUrl());
+            console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
+
+            var id_token = googleUser.getAuthResponse().id_token;
+            const data = { id_token };
+
+            fetch(url, {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify(data)
+            })
+                .then(res => res.json())
+                .then(data => console.log('Nuestro server', data))
+                .catch(console.log)
+        }
+
+
+
+        function signOut() {
+            var auth2 = gapi.auth2.getAuthInstance();
+            auth2.signOut().then(function () {
+                console.log('User signed out.');
+            });
+        }
+
+    </script>
 
 </body>
 
