configuracion inicial sockets

--- a/public/registro/index.html
+++ b/public/registro/index.html
@@ -27,6 +27,7 @@
 
     <script src="https://apis.google.com/js/platform.js" async defer></script>
 
+    <!-- script sin modificar -->
     <script>
 
         var url = (window.location.hostname.includes('localhost'))
