--- a/public/index.html
+++ b/public/index.html
@@ -9,22 +9,47 @@
     <meta name="google-signin-client_id"
         content="1034679083063-tdjbien3nfk9nl78da6err0ea61dsgo5.apps.googleusercontent.com">
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+
     <title>Rest-Server-byHelio</title>
 </head>
 
-<body>
+<body class="container mt-5">
 
-    <h1>Acceso Denegado</h1>
-    <hr>
+    <div class="row">
 
-    <h2>Intenta iniciar sesion</h2>
-  
-  
-    <a href="login">Login</a>
-   
+        <div class="col-sm-6">
+            <h1>Google Signin</h1>
+            <hr>
+            <br>
+            <div class="g-signin2" data-onsuccess="onSignIn"></div>
+            <br>
+
+            <a href="#" onclick="signOut();">Cerrar sesion</a>
+
+        </div>
+        
+        <div class="col-sm-6">
+            <h1>Login manual</h1>
+            <hr>
+
+            <form class="d-grid">
+                <input type="text" name="correo" class="form-control mb-2" placeholder="Correo">
+                <input type="text" name="password" class="form-control mb-2" placeholder="Password">
+                <button type="submit" class="btn btn-primary">
+                    Ingresar
+                </button>
+            </form>
+
+        </div>
+
+    </div>
 
 
 
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <script src="./js/auth.js"></script>
 </body>
 
 </html>
