--- a/public/chat.html
+++ b/public/chat.html
@@ -29,7 +29,9 @@
         <div class="col-sm-6">
             <h3>Chat Msg</h3>
             <hr>
-            <ul id="ulMensajes"></ul>
+            <ul id="ulMensajes">
+                
+            </ul>
         </div>
 
     </div>
